--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "expo": "~44.0.0",
     "expo-av": "~10.2.0",
     "expo-status-bar": "~1.2.0",
+    "qs": "^6.10.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-email": "^1.1.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-reanimated": "^2.2.4",
